introduce titlepage after coverpage

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ FIG := $(patsubst %.svg,%.pdf,$(wildcard fig/*/*.svg))
 
 all: sicp.pdf
 
-sicp.pdf: sicp.tex exercises.tex figures.tex coverpage.pdf ${FIG}
+sicp.pdf: sicp.tex exercises.tex figures.tex coverpage.pdf titlepage.pdf ${FIG}
 	latexmk -pdflatex="xelatex %O %S" -pdf -dvi- -ps- $<; \
 	mv sicp.pdf ..
 
@@ -23,6 +23,6 @@ clean:
 	latexmk -CA
 
 clean-all: clean
-	${RM} ${FIG} sicp.tex exercises.tex figures.tex coverpage.pdf
+	${RM} ${FIG} sicp.tex exercises.tex figures.tex coverpage.pdf titlepage.pdf
 
 .PHONY: all clean clean-all
